--- a/public/teacher.html
+++ b/public/teacher.html
@@ -6,399 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teacher Control Panel - LearnToBot Class</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        /* Mobile Styles */
-        @import url('mobile.css');
-
-
-        body {
-            font-family: 'Inter', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: #111827;
-            min-height: 100vh;
-            padding-top: 80px;
-            color: #E5E7EB;
-        }
-
-        .navbar {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            background: linear-gradient(135deg, #1F2937 0%, #111827 100%);
-            border-bottom: 2px solid #3B82F6;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
-            z-index: 1000;
-            padding: 0 20px;
-        }
-
-        .navbar-container {
-            max-width: 1400px;
-            margin: 0 auto;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            height: 70px;
-        }
-
-        .navbar-brand {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            color: #E5E7EB;
-            text-decoration: none;
-            font-size: 1.5em;
-            font-weight: 700;
-            transition: all 0.3s ease;
-        }
-
-        .navbar-brand:hover {
-            color: #3B82F6;
-            transform: scale(1.05);
-        }
-
-        .navbar-logo {
-            font-size: 1.8em;
-        }
-
-        .navbar-menu {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            list-style: none;
-        }
-
-        .navbar-link {
-            color: #9CA3AF;
-            text-decoration: none;
-            font-weight: 600;
-            font-size: 1em;
-            padding: 8px 10px;
-            border-radius: 8px;
-            transition: all 0.3s ease;
-            position: relative;
-        }
-
-        .navbar-link:hover {
-            color: #3B82F6;
-            background: rgba(59, 130, 246, 0.1);
-        }
-
-        .navbar-link.active {
-            color: #3B82F6;
-            background: rgba(59, 130, 246, 0.15);
-        }
-
-        .navbar-link.active::after {
-            content: '';
-            position: absolute;
-            bottom: -2px;
-            left: 0;
-            right: 0;
-            height: 2px;
-            background: #3B82F6;
-        }
-
-        .navbar-auth {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-        }
-
-        .navbar-user {
-            color: #E5E7EB;
-            font-weight: 600;
-            padding: 8px 16px;
-            background: rgba(59, 130, 246, 0.2);
-            border-radius: 20px;
-            font-size: 0.95em;
-        }
-
-        .navbar-btn {
-            background: #3B82F6;
-            color: white;
-            padding: 10px 20px;
-            border-radius: 8px;
-            border: none;
-            cursor: pointer;
-            font-weight: 600;
-            font-size: 0.95em;
-            transition: all 0.3s ease;
-            text-decoration: none;
-            display: inline-block;
-        }
-
-        .navbar-btn:hover {
-            background: #2563EB;
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(59, 130, 246, 0.4);
-        }
-
-        .page-content {
-            padding: 20px;
-        }
-
-        .header {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
-        .header h1 {
-            font-size: 2.5em;
-            margin-bottom: 10px;
-            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
-        }
-
-        .header p {
-            font-size: 1.2em;
-            color: #9CA3AF;
-        }
-
-        .container {
-            max-width: 1400px;
-            margin: 0 auto;
-        }
-
-        .control-panel {
-            background: #1F2937;
-            border-radius: 20px;
-            padding: 30px;
-            margin-bottom: 30px;
-            border: 1px solid #374151;
-        }
-
-        .section-title {
-            font-size: 1.5em;
-            margin-bottom: 20px;
-            color: #E5E7EB;
-            font-weight: 600;
-        }
-
-        .quick-actions {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 15px;
-            margin-bottom: 30px;
-        }
-
-        .action-btn {
-            background: #3B82F6;
-            color: white;
-            padding: 15px 25px;
-            border-radius: 10px;
-            border: 2px solid #3B82F6;
-            cursor: pointer;
-            font-weight: 600;
-            transition: all 0.3s ease;
-            font-size: 1em;
-        }
-
-        .action-btn:hover {
-            background: #2563EB;
-            border-color: #2563EB;
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(59, 130, 246, 0.4);
-        }
-
-        .action-btn.danger {
-            background: #EF4444;
-            border-color: #EF4444;
-        }
-
-        .action-btn.danger:hover {
-            background: #DC2626;
-            border-color: #DC2626;
-        }
-
-        .clients-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 20px;
-        }
-
-        .client-card {
-            background: #111827;
-            padding: 20px;
-            border-radius: 15px;
-            border: 1px solid #374151;
-            transition: all 0.3s ease;
-        }
-
-        .client-card:hover {
-            border-color: #3B82F6;
-            transform: translateY(-2px);
-        }
-
-        .client-name {
-            font-size: 1.3em;
-            font-weight: 600;
-            margin-bottom: 10px;
-            color: #3B82F6;
-        }
-
-        .client-info {
-            color: #9CA3AF;
-            margin-bottom: 5px;
-        }
-
-        .client-actions {
-            margin-top: 15px;
-            padding-top: 15px;
-            border-top: 1px solid #374151;
-        }
-
-        .mini-btn {
-            background: #3B82F6;
-            color: white;
-            padding: 8px 15px;
-            border-radius: 8px;
-            border: none;
-            cursor: pointer;
-            margin-right: 5px;
-            margin-top: 5px;
-            font-size: 0.9em;
-            font-weight: 600;
-        }
-
-        .mini-btn:hover {
-            background: #2563EB;
-        }
-
-        .stats-bar {
-            background: #1F2937;
-            padding: 20px;
-            border-radius: 15px;
-            margin-bottom: 20px;
-            display: flex;
-            justify-content: space-around;
-            border: 1px solid #374151;
-        }
-
-        .stat-item {
-            text-align: center;
-        }
-
-        .stat-number {
-            font-size: 3em;
-            font-weight: bold;
-            color: #3B82F6;
-        }
-
-        .stat-label {
-            color: #9CA3AF;
-        }
-
-        .no-clients {
-            text-align: center;
-            padding: 40px;
-            color: #6B7280;
-            font-size: 1.2em;
-        }
-
-        .project-select {
-            width: 100%;
-            padding: 15px;
-            border: 2px solid #374151;
-            border-radius: 10px;
-            background: #111827;
-            color: #E5E7EB;
-            font-size: 1em;
-            margin-bottom: 15px;
-            cursor: pointer;
-            font-family: inherit;
-        }
-
-        .project-select:focus {
-            outline: none;
-            border-color: #3B82F6;
-        }
-
-        .project-select option {
-            background: #111827;
-            color: #E5E7EB;
-            padding: 10px;
-        }
-
-        .project-select optgroup {
-            color: #3B82F6;
-            font-weight: 600;
-            background: #1F2937;
-        }
-
-        .connections-table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-
-        .connections-table th {
-            background: #111827;
-            color: #3B82F6;
-            padding: 15px;
-            text-align: left;
-            font-weight: 600;
-            border-bottom: 2px solid #3B82F6;
-        }
-
-        .connections-table td {
-            padding: 12px 15px;
-            border-bottom: 1px solid #374151;
-            color: #E5E7EB;
-        }
-
-        .connections-table tr:hover {
-            background: #111827;
-        }
-
-        .url-cell {
-            font-family: 'Courier New', monospace;
-            color: #3B82F6;
-            font-size: 0.9em;
-        }
-
-        .project-dropdown {
-            padding: 8px;
-            border: 2px solid #374151;
-            border-radius: 8px;
-            background: #111827;
-            color: #E5E7EB;
-            font-size: 0.9em;
-            cursor: pointer;
-            max-width: 200px;
-        }
-
-        .project-dropdown:focus {
-            outline: none;
-            border-color: #3B82F6;
-        }
-
-        .send-btn {
-            background: #10B981;
-            color: white;
-            padding: 8px 15px;
-            border-radius: 8px;
-            border: 2px solid #10B981;
-            cursor: pointer;
-            font-weight: 600;
-            font-size: 0.9em;
-            margin-left: 8px;
-        }
-
-        .send-btn:hover {
-            background: #059669;
-            border-color: #059669;
-        }
-
-        .control-cell {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-        }
+        /* Styles delegated to kids-theme.css */
+        /* Link kids-theme explicitly as it might not be linked in teacher.html */
     </style>
+    <link rel="stylesheet" href="kids-theme.css">
 </head>
 
 <body>
