--- a/public/project.html
+++ b/public/project.html
@@ -9,642 +9,23 @@
     <link rel="stylesheet" href="mobile.css">
     <script src="analytics.js"></script> <!-- Analytics Telemetry -->
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Inter', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: #111827;
-            min-height: 100vh;
-            padding-top: 60px;
-        }
-
-        .navbar {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            background: linear-gradient(135deg, #1F2937 0%, #111827 100%);
-            border-bottom: 2px solid #3B82F6;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
-            z-index: 1000;
-            padding: 0 20px;
-        }
-
-        .navbar-container {
-            max-width: 1400px;
-            margin: 0 auto;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            height: 50px;
-        }
-
-        .navbar-brand {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            color: #E5E7EB;
-            text-decoration: none;
-            font-size: 1.2em;
-            font-weight: 700;
-            transition: all 0.3s ease;
-        }
-
-        .navbar-brand:hover {
-            color: #3B82F6;
-            transform: scale(1.05);
-        }
-
-        .navbar-logo {
-            font-size: 1.5em;
-        }
-
-        .navbar-menu {
-            display: flex;
-            align-items: center;
-            gap: 30px;
-            list-style: none;
-        }
-
-        .navbar-link {
-            color: #9CA3AF;
-            text-decoration: none;
-            font-weight: 600;
-            font-size: 1em;
-            padding: 8px 16px;
-            border-radius: 8px;
-            transition: all 0.3s ease;
-            position: relative;
-        }
-
-        .navbar-link:hover {
-            color: #3B82F6;
-            background: rgba(59, 130, 246, 0.1);
-        }
-
-        .navbar-link.active {
-            color: #3B82F6;
-            background: rgba(59, 130, 246, 0.15);
-        }
-
-        .navbar-auth {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-        }
-
-        .navbar-btn {
-            background: #3B82F6;
-            color: white;
-            padding: 10px 20px;
-            border-radius: 8px;
-            border: none;
-            cursor: pointer;
-            font-weight: 600;
-            font-size: 0.95em;
-            transition: all 0.3s ease;
-            text-decoration: none;
-            display: inline-block;
-        }
-
-        .navbar-btn:hover {
-            background: #2563EB;
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(59, 130, 246, 0.4);
-        }
-
-        .page-content {
-            padding: 10px 20px;
-        }
-
-        .brand-header {
-            text-align: center;
-            color: #E5E7EB;
-            margin-bottom: 20px;
-        }
-
-        .brand-header h1 {
-            font-size: 2em;
-            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
-            margin-bottom: 5px;
-            font-weight: 600;
-        }
-
-        .header {
-            max-width: 1400px;
-            margin: 0 auto 10px;
-            display: flex;
-            align-items: center;
-            gap: 20px;
-        }
-
-        .back-btn {
-            background: #1F2937;
-            color: #E5E7EB;
-            padding: 12px 25px;
-            border-radius: 25px;
-            text-decoration: none;
-            font-weight: 600;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
-            transition: transform 0.2s ease;
-            border: 2px solid #374151;
-        }
-
-        .back-btn:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
-            background: #374151;
-            border-color: #3B82F6;
-        }
-
-        .project-title {
-            color: #E5E7EB;
-            font-size: 1.2em;
-            text-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
-            flex: 1;
-            font-weight: 600;
-        }
-
-        .pdf-btn {
-            background: #EF4444;
-            color: white;
-            padding: 12px 25px;
-            border-radius: 25px;
-            border: 2px solid #EF4444;
-            font-weight: 600;
-            cursor: pointer;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
-            transition: all 0.2s ease;
-            font-size: 1em;
-            font-family: inherit;
-        }
-
-        .pdf-btn:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(239, 68, 68, 0.3);
-            background: #DC2626;
-            border-color: #DC2626;
-        }
-
-        .pdf-btn.active {
-            background: #3B82F6;
-            border-color: #3B82F6;
-        }
-
-        /* Updated Immersive Player Styles */
-        .container {
-            max-width: 100%;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            /* Remove grid, use flex for centering */
-        }
-
+        /* Styles delegated to kids-theme.css */
         .video-player-container {
             position: relative;
             width: 100%;
             max-width: 1200px;
-            /* Maximize but keep reasonable on ultra-wide */
             aspect-ratio: 16/9;
             background: #000;
-            border-radius: 15px;
+            border-radius: var(--ltb-border-radius);
             overflow: hidden;
-            box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
             margin-bottom: 30px;
         }
 
-        video {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-        }
-
-        /* Centered Overlay Controls */
-        .controls-overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: rgba(0, 0, 0, 0.4);
-            opacity: 0;
-            transition: opacity 0.3s ease;
-            pointer-events: none;
-            /* Let clicks pass through to video unless on buttons */
-        }
-
-        /* Show controls when user is active */
-        .video-player-container.user-active .controls-overlay {
-            opacity: 1;
-            pointer-events: auto;
-        }
-
-        /* Timeline Container */
-        .timeline-container {
-            position: absolute;
-            bottom: 150px;
-            /* Above filmstrip */
-            left: 20px;
-            right: 20px;
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            background: rgba(0, 0, 0, 0.6);
-            padding: 10px 20px;
-            border-radius: 30px;
-            opacity: 0;
-            transition: opacity 0.3s ease;
-            pointer-events: none;
-        }
-
-        .video-player-container.user-active .timeline-container {
-            opacity: 1;
-            pointer-events: auto;
-        }
-
-        input[type=range] {
-            -webkit-appearance: none;
-            appearance: none;
-            width: 100%;
-            background: transparent;
-            cursor: pointer;
-        }
-
-        input[type=range]:focus {
-            outline: none;
-        }
-
-        /* Range Track */
-        input[type=range]::-webkit-slider-runnable-track {
-            width: 100%;
-            height: 8px;
-            background: rgba(255, 255, 255, 0.3);
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        /* Range Thumb */
-        input[type=range]::-webkit-slider-thumb {
-            height: 20px;
-            width: 20px;
-            border-radius: 50%;
-            background: #3B82F6;
-            margin-top: -6px;
-            -webkit-appearance: none;
-            box-shadow: 0 0 10px rgba(59, 130, 246, 0.5);
-            transition: transform 0.1s;
-        }
-
-        input[type=range]::-webkit-slider-thumb:hover {
-            transform: scale(1.2);
-            background: #60A5FA;
-        }
-
-        /* Time Text */
-        .time-display {
-            color: white;
-            font-family: monospace;
-            font-size: 1.1em;
-            font-weight: bold;
-            min-width: 100px;
-            text-align: center;
-        }
-
-        .kid-controls-centered {
-            display: flex;
-            gap: 40px;
-            align-items: center;
-        }
-
-        .big-btn {
-            background: transparent;
-            border: 3px solid rgba(255, 255, 255, 0.2);
-            color: white;
-            border-radius: 50%;
-            width: 100px;
-            height: 100px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 2.5em;
-            cursor: pointer;
-            transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            /* Bouncy */
-            backdrop-filter: blur(5px);
-            box-shadow: none;
-        }
-
-        .big-btn:hover {
-            transform: scale(1.15);
-            background: rgba(59, 130, 246, 0.9);
-            border-color: #60A5FA;
-            box-shadow: 0 0 30px rgba(59, 130, 246, 0.4);
-        }
-
-        .big-btn.play-btn {
-            width: 150px;
-            height: 150px;
-            font-size: 6em;
-            background: transparent;
-            border-color: rgba(255, 255, 255, 0.3);
-        }
-
-        .big-btn.play-btn:hover {
-            background: rgba(255, 255, 255, 0.1);
-            border-color: #34D399;
-            box-shadow: 0 0 40px rgba(16, 185, 129, 0.4);
-        }
-
-        .big-btn.play-btn.paused-state {
-            background: transparent;
-            /* Red for pause */
-        }
-
-        /* Bottom Filmstrip Overlay */
-        .filmstrip-overlay {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            height: 140px;
-            background: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0) 100%);
+        /* Keep only page-specific layout that isn't in theme */
+        .container {
             display: flex;
             flex-direction: column;
-            justify-content: flex-end;
-            padding: 20px;
-            transform: translateY(100%);
-            /* Hidden by default */
-            transition: transform 0.3s ease;
-            pointer-events: none;
-        }
-
-        .video-player-container.user-active .filmstrip-overlay {
-            transform: translateY(0);
-            pointer-events: auto;
-        }
-
-        .filmstrip-track {
-            display: flex;
-            gap: 15px;
-            overflow-x: auto;
-            padding-bottom: 10px;
-            scrollbar-width: thin;
-            scrollbar-color: #3B82F6 transparent;
-        }
-
-        .filmstrip-track::-webkit-scrollbar {
-            height: 8px;
-        }
-
-        .filmstrip-track::-webkit-scrollbar-thumb {
-            background-color: #3B82F6;
-            border-radius: 10px;
-        }
-
-        .filmstrip-item {
-            flex: 0 0 160px;
-            height: 90px;
-            background: #111827;
-            border-radius: 10px;
-            border: 2px solid #374151;
-            cursor: pointer;
-            position: relative;
-            overflow: hidden;
-            transition: all 0.2s ease;
-        }
-
-        .filmstrip-item:hover {
-            transform: scale(1.05);
-            border-color: #3B82F6;
-            z-index: 10;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
-        }
-
-        .filmstrip-item.active {
-            border-color: #10B981;
-            box-shadow: 0 0 15px rgba(16, 185, 129, 0.4);
-        }
-
-        .filmstrip-thumb {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            opacity: 0.6;
-            transition: opacity 0.2s;
-        }
-
-        .filmstrip-item:hover .filmstrip-thumb,
-        .filmstrip-item.active .filmstrip-thumb {
-            opacity: 1;
-        }
-
-        .filmstrip-title {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background: rgba(0, 0, 0, 0.8);
-            color: white;
-            font-size: 0.8em;
-            padding: 5px;
-            text-align: center;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-
-        .filmstrip-number {
-            position: absolute;
-            top: 5px;
-            left: 5px;
-            background: #3B82F6;
-            color: white;
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-            font-size: 0.7em;
-            display: flex;
             align-items: center;
-            justify-content: center;
-            font-weight: bold;
-        }
-
-        /* Navigation Buttons (Global) */
-        .global-nav {
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
-            max-width: 1200px;
-            margin-top: 20px;
-        }
-
-        .pdf-viewer {
-            background: #1F2937;
-            border-radius: 15px;
-            overflow: hidden;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-            /* Ensure it handles large heights gracefully */
-        }
-
-        .pdf-viewer-header {
-            background: #111827;
-            padding: 15px 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            border-bottom: 1px solid #374151;
-        }
-
-        .pdf-viewer-title {
-            color: white;
-            font-weight: bold;
-            font-size: 1.2em;
-        }
-
-        .close-pdf-btn {
-            background: transparent;
-            border: 1px solid #EF4444;
-            color: #EF4444;
-            padding: 5px 15px;
-            border-radius: 20px;
-            cursor: pointer;
-            transition: all 0.2s;
-        }
-
-        .close-pdf-btn:hover {
-            background: #EF4444;
-            color: white;
-        }
-
-        .pdf-embed {
-            width: 100%;
-            height: 85vh;
-            /* Very tall to ensure visibility */
-            border: none;
-            background: white;
-            display: block;
-            /* Removes bottom space */
-        }
-
-        /* Rating Modal Styles */
-        .rating-modal {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.85);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 1000;
-            backdrop-filter: blur(5px);
-            animation: fadeIn 0.3s ease;
-        }
-
-        .rating-content {
-            background: #1F2937;
-            padding: 30px;
-            border-radius: 20px;
-            text-align: center;
-            border: 2px solid #3B82F6;
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
-            max-width: 400px;
-            width: 90%;
-            animation: scaleIn 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        }
-
-        .rating-title {
-            color: #E5E7EB;
-            font-size: 1.5em;
-            margin-bottom: 20px;
-            font-weight: bold;
-        }
-
-        .star-rating {
-            font-size: 3em;
-            color: #4B5563;
-            margin-bottom: 20px;
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-            cursor: pointer;
-        }
-
-        .star-rating span {
-            transition: all 0.2s;
-        }
-
-        .star-rating span:hover,
-        .star-rating span.active {
-            color: #F59E0B;
-            transform: scale(1.2);
-        }
-
-        .rating-comment {
-            width: 100%;
-            background: #111827;
-            border: 1px solid #374151;
-            color: white;
-            padding: 10px;
-            border-radius: 8px;
-            margin-bottom: 20px;
-            resize: none;
-            font-family: inherit;
-        }
-
-        .rating-comment:focus {
-            outline: none;
-            border-color: #3B82F6;
-        }
-
-        .submit-rating-btn {
-            background: #3B82F6;
-            color: white;
-            border: none;
-            padding: 12px 30px;
-            border-radius: 25px;
-            font-size: 1.1em;
-            font-weight: bold;
-            cursor: pointer;
-            transition: all 0.2s;
-            width: 100%;
-        }
-
-        .submit-rating-btn:hover {
-            background: #2563EB;
-            transform: translateY(-2px);
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-
-            to {
-                opacity: 1;
-            }
-        }
-
-        @keyframes scaleIn {
-            from {
-                transform: scale(0.9);
-                opacity: 0;
-            }
-
-            to {
-                transform: scale(1);
-                opacity: 1;
-            }
         }
     </style>
 </head>
